2008-11-26	Joel Sherrill <joel.sherrill@oarcorp.com>

	* main.cc: Rework to avoid new GCC error:
	  "ISO C++ forbids taking address of function ::main"

2008-09-26	Joel Sherrill <joel.sherrill@oarcorp.com>

	* main.cc: Update STACK_CHECKER_ON to CONFIGURE_STACK_CHECKER_ENABLED.

2008-09-26	Joel Sherrill <joel.sherrill@oarcorp.com>

	* periodic.c: Change boolean to bool.

2008-03-12	Joel Sherrill <joel.sherrill@OARcorp.com>

	* LocalMessageQueuePOSIX10031c.h, test.cc: Add include files needed by
	gcc 4.3 and later.

2007-11-05	Joel Sherrill <joel.sherrill@oarcorp.com>

	* test.cc: Make LEDs work on IceCube board.

2007-11-02	Joel Sherrill <joel.sherrill@OARcorp.com>

	* .cvsignore: Correct this.

2007-11-02	Joel Sherrill <joel.sherrill@OARcorp.com>

	* ChangeLog, LocalMessageQueuePOSIX10031c.h, Makefile, MessageQueueT.h,
	main.cc, periodic.c, test.cc: Now builds and runs. Apparently I
	forgot to merge changes from the last class.

2004-09-22	Joel Sherrill <joel.sherrill@OARcorp.com>

	* .cvsignore, ChangeLog, LocalMessageQueuePOSIX10031c.h, Makefile,
	Makefile.linux, MessageQueueT.h, MessageQueueT_BASE.h, ledServer.h,
	main.cc, menu.cc, menu.h, periodic.c, periodic.h, test.cc: New files.
