@@ -45,17 +45,21 @@ int main(
 
 #define CONFIGURE_RTEMS_INIT_TASKS_TABLE
 
-#define CONFIGURE_MAXIMUM_TASKS 102
-#define CONFIGURE_MAXIMUM_PERIODS  100
-#define CONFIGURE_MAXIMUM_POSIX_THREADS 2
-#define CONFIGURE_MAXIMUM_POSIX_CONDITION_VARIABLES  2
-#define CONFIGURE_MAXIMUM_POSIX_MUTEXES 2
-#define CONFIGURE_EXTRA_TASK_STACKS (32 * 1024)
+#if defined(BSP_SMALL_MEMORY)
+  #define CONFIGURE_MAXIMUM_TASKS 1
+#else
+  #define CONFIGURE_MAXIMUM_TASKS 102
+  #define CONFIGURE_MAXIMUM_PERIODS  100
+  #define CONFIGURE_MAXIMUM_POSIX_THREADS 2
+  #define CONFIGURE_MAXIMUM_POSIX_CONDITION_VARIABLES  2
+  #define CONFIGURE_MAXIMUM_POSIX_MUTEXES 2
+  #define CONFIGURE_EXTRA_TASK_STACKS (32 * 1024)
 
-#define CONFIGURE_USE_IMFS_AS_BASE_FILESYSTEM
-#define CONFIGURE_LIBIO_MAXIMUM_FILE_DESCRIPTORS 20
+  #define CONFIGURE_USE_IMFS_AS_BASE_FILESYSTEM
+  #define CONFIGURE_LIBIO_MAXIMUM_FILE_DESCRIPTORS 20
 
-#define CONFIGURE_STACK_CHECKER_ENABLED
+  #define CONFIGURE_STACK_CHECKER_ENABLED
+#endif
 
 #define CONFIGURE_INIT
 
